; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/wbemprox/extr_builtin.c_get_lastbootuptime.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/wbemprox/extr_builtin.c_get_lastbootuptime.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32 }
%struct.TYPE_5__ = type { i32, i32, i32, i32, i32, i32, i32 }

@get_lastbootuptime.fmtW = internal constant [34 x i8] c"%04u%02u%02u%02u%02u%02u.%06u+000\00", align 16
@SystemTimeOfDayInformation = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* ()* @get_lastbootuptime to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @get_lastbootuptime() #0 {
  %1 = alloca i8*, align 8
  %2 = alloca %struct.TYPE_6__, align 4
  %3 = alloca %struct.TYPE_5__, align 4
  %4 = alloca i8*, align 8
  %5 = call i8* @heap_alloc(i32 26)
  store i8* %5, i8** %4, align 8
  %6 = icmp ne i8* %5, null
  br i1 %6, label %8, label %7

7:                                                ; preds = %0
  store i8* null, i8** %1, align 8
  br label %31

8:                                                ; preds = %0
  %9 = load i32, i32* @SystemTimeOfDayInformation, align 4
  %10 = call i32 @NtQuerySystemInformation(i32 %9, %struct.TYPE_6__* %2, i32 4, i32* null)
  %11 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %2, i32 0, i32 0
  %12 = call i32 @RtlTimeToTimeFields(i32* %11, %struct.TYPE_5__* %3)
  %13 = load i8*, i8** %4, align 8
  %14 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %3, i32 0, i32 6
  %15 = load i32, i32* %14, align 4
  %16 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %3, i32 0, i32 5
  %17 = load i32, i32* %16, align 4
  %18 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %3, i32 0, i32 4
  %19 = load i32, i32* %18, align 4
  %20 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %3, i32 0, i32 3
  %21 = load i32, i32* %20, align 4
  %22 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %3, i32 0, i32 2
  %23 = load i32, i32* %22, align 4
  %24 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %3, i32 0, i32 1
  %25 = load i32, i32* %24, align 4
  %26 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %3, i32 0, i32 0
  %27 = load i32, i32* %26, align 4
  %28 = mul nsw i32 %27, 1000
  %29 = call i32 @sprintfW(i8* %13, i8* getelementptr inbounds ([34 x i8], [34 x i8]* @get_lastbootuptime.fmtW, i64 0, i64 0), i32 %15, i32 %17, i32 %19, i32 %21, i32 %23, i32 %25, i32 %28)
  %30 = load i8*, i8** %4, align 8
  store i8* %30, i8** %1, align 8
  br label %31

31:                                               ; preds = %8, %7
  %32 = load i8*, i8** %1, align 8
  ret i8* %32
}

declare dso_local i8* @heap_alloc(i32) #1

declare dso_local i32 @NtQuerySystemInformation(i32, %struct.TYPE_6__*, i32, i32*) #1

declare dso_local i32 @RtlTimeToTimeFields(i32*, %struct.TYPE_5__*) #1

declare dso_local i32 @sprintfW(i8*, i8*, i32, i32, i32, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
